--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,22 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+    <div class="pure-g">
+        <div class="pure-u-1-1 profile">
+            <img src="https://pbs.twimg.com/profile_images/758788500443500544/EGhOu1BS.jpg">
+            <h1>Yes he does <i class="em  em-stuck_out_tongue_winking_eye"></i></h1>
+            <div>
+                <a href="https://twitter.com/juristr" class="twitter-follow-button" data-show-count="true">Follow me on Twitter</a>
+                <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+        </div>
+        <!--<div class="pure-u-1-1">
+            <div class="links">
+                <a href="https://juristr.com">
+                    <img src="./assets/imgs/chrome-logo.png" /> https://juristr.com
+                </a>
+                <a href="https://twitter.com/juristr">
+                    <img src="./assets/imgs/twitter-logo.png" /> @juristr
+                </a>
+            </div>
+        </div>-->
+    </div>
+</div>
