--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <div class="container">
-    <div class="pure-g">
-        <div class="pure-u-1-1 profile">
-            <img src="https://pbs.twimg.com/profile_images/758788500443500544/EGhOu1BS.jpg">
-            <h1>juri.rocks <i class="em  em-stuck_out_tongue_winking_eye"></i></h1>
-            <div>
-                <a href="https://twitter.com/juristr" class="twitter-follow-button" data-show-count="true">Follow me on Twitter</a>
-            </div>
-        </div>
+  <div class="pure-g">
+    <div class="pure-u-1-1 profile">
+      <nav>
+        <a routerLink="home"
+          routerLinkActive="route-active"
+          [routerLinkActiveOptions]="{exact:true}">Home</a>
+        <a routerLink="starwars" routerLinkActive="route-active">Starwars</a>
+      </nav>
     </div>
+    </div>
+    <router-outlet></router-outlet>
 </div>
